# demeteo

./: .commitlintrc.json  .gitignore  AGENT.md  AGENTS.md  AGENT_INTEGRATION.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONNECTION_FLOWS.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DDD_MODEL.md  EXECUTION_PLAN.md  LICENSE  LoopEngineeringplan.md  PRD.md  README.md  REDESIGN_PLAN.md  index.html  opencode.json  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V10__add_token_tracking_columns.sql  V11__notifications.sql  V12__artifact_settings.sql  V13__loop_and_step_overrides.sql  V14__project_workflow_overrides.sql  V15__step_level_workflow_overrides.sql  V16__memory_signals.sql  V17__project_memory_v2.sql  V18__extra_writable_paths.sql  V19__feature_attachments.sql  V1__initial_tables.sql  V2__schema_version.sql  V3__step_iteration_count.sql  V4__subtask_runs_and_merges.sql  V5__step_execution_artifact_paths.sql  V6__project_memory.sql  V7__workflow_schedule.sql  V8__project_harnesses.sql  V9__feature_syncs.sql
src-tauri/src/: credential_cache.rs  db.rs  forward.rs  lib.rs  main.rs  paths.rs  sftp.rs  ssh_util.rs  state.rs  terminal.rs
src-tauri/src/adapters/: conflict.rs  memory_llm.rs  memory_worker.rs  merge.rs  mod.rs  mr_monitor.rs  mr_publisher.rs  pricing.rs  provider_http.rs  router.rs  scheduler.rs
src-tauri/src/application/: agent_probe.rs  (+8 more)
src-tauri/workflows/: bugfix-pipeline.json  ci-fix.json  docs-update.json  experiment.json  refactor.json  simple-task.json  standard-feature-pipeline.json
(+346 files in other folders)
