[package]
name = "demeteo"
version = "0.1.0"
description = "Desktop control plane for orchestrating local and remote AI coding agents"
authors = ["Steven Yepes <contact@stvcloud.dev>"]
license = "MIT"
repository = "https://github.com/stevenyepes/demeteo"
homepage = "https://github.com/stevenyepes/demeteo"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "demeteo_lib"

[dependencies]
async-trait = "0.1"
keyring = {
  version = "3",
  features = ["apple-native", "sync-secret-service", "windows-native"]
}
parking_lot = "0.12"
portable-pty = "0.8"
refinery = { version = "0.8", features = ["rusqlite"] }
reqwest = {
  version = "0.12",
  default-features = false,
  features = ["blocking", "json", "rustls-tls"]
}
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
